--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Social Deal Testcase</string>
+    <string name="no_favorite_deals_yet">Je hebt nog geen favoriete deals</string>
+    <string name="usd">USD</string>
+    <string name="eur">EUR</string>
 </resources>
